chnages done in ice cream project

--- a/natural-ice-cream/blogs.html
+++ b/natural-ice-cream/blogs.html
@@ -85,7 +85,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="#"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
