--- a/natural-ice-cream/franchise-queries.html
+++ b/natural-ice-cream/franchise-queries.html
@@ -85,7 +85,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="#"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
@@ -133,7 +133,12 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+          <a
+            href="./blogs.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Blogs</a
+          >
         </li>
       </ul>
     </div>
@@ -149,7 +154,7 @@
     <!-- footer -->
     <footer
       class="text-light d-flex justify-content-between p-5"
-      style="background-color: #232020; position: fixed; bottom: 0; width: 100%"
+      style="background-color: #232020"
     >
       <div class="contact-us" style="width: 30%">
         <p style="color: #989898; font-weight: bold">Contact Us</p>
