--- a/natural-ice-cream/ingredient-story.html
+++ b/natural-ice-cream/ingredient-story.html
@@ -85,7 +85,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="#"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
@@ -125,11 +125,20 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a>Store
-          Locator
+          <a
+            href="./store-locator.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Store Locator</a
+          >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+          <a
+            href="./blogs.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Blogs</a
+          >
         </li>
       </ul>
     </div>
@@ -214,7 +223,7 @@
     <!-- footer -->
     <footer
       class="text-light d-flex justify-content-between p-5"
-      style="background-color: #232020; position: relative; bottom: 0"
+      style="background-color: #232020"
     >
       <div class="contact-us" style="width: 30%">
         <p style="color: #989898; font-weight: bold">Contact Us</p>
