--- a/natural-ice-cream/malai.html
+++ b/natural-ice-cream/malai.html
@@ -85,7 +85,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="#"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
@@ -125,11 +125,20 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a>Store
-          Locator
+          <a
+            href="./store-locator.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Store Locator</a
+          >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+          <a
+            href="./blogs.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Blogs</a
+          >
         </li>
       </ul>
     </div>
@@ -432,7 +441,7 @@
                 Matcha Malai Float
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/matcha-malai-float.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -459,7 +468,7 @@
                 Instant Malai Cake
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/strawberry-pudding.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
