--- a/natural-ice-cream/our-legacy.html
+++ b/natural-ice-cream/our-legacy.html
@@ -82,10 +82,10 @@
             >Tree To Treat</a
           >
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown text-light">
           <a
-            class="nav-link dropdown-toggle text-light"
-            href="#"
+            class="nav-link dropdown-toggle"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
