--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -89,7 +89,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="#"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
