--- a/natural-ice-cream/malai-receipes/mango-panna-cotta.html
+++ b/natural-ice-cream/malai-receipes/mango-panna-cotta.html
@@ -84,14 +84,14 @@
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle text-light"
+            class="nav-link dropdown-toggle"
             href="#"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Products
+            Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Action</a></li>
