--- a/natural-ice-cream/blogs.html
+++ b/natural-ice-cream/blogs.html
@@ -29,6 +29,15 @@
         font-weight: weight;
         font-style: normal;
       }
+
+      .card {
+        overflow: hidden;
+      }
+
+      .card:hover img {
+        scale: 1.05;
+        transform: rotate(-2deg);
+      }
     </style>
   </head>
   <body>
@@ -186,7 +195,7 @@
               <a
                 href="./blogs/make-your-holidays-sweeter-with-naturals-ice-cream-santa-contest.html"
                 class="btn btn-success text-light text-center my-2"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -216,7 +225,7 @@
                 href="./blogs/add-a-sweet-twist-to-your-festivities-with-raspberry-chocolate-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -246,7 +255,7 @@
                 href="./blogs/winter-inspired-ice-cream-youll-love.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -276,7 +285,7 @@
                 href="./blogs/sweeten-your-countdown-with-persian-delight-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -306,7 +315,7 @@
                 href="./blogs/try-prasadam-ice-cream-a-sweet-offering-for-this-ganesh-chaturthi.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -336,7 +345,7 @@
                 href="./blogs/why-you-need-to-try-peach-apricot-ice-cream-this-monsoon.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -366,7 +375,7 @@
                 href="./blogs/craving-something-cool-this-monsoon-try-naturals-sitaphal-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -396,7 +405,7 @@
                 href="./blogs/the-journey-of-kala-jamun-into-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
@@ -426,7 +435,7 @@
                 href="./blogs/why-lychee-ice-cream-belongs-in-every-summer-party.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
-                >View Receipe</a
+                >View Blog</a
               >
             </div>
           </div>
