--- a/natural-ice-cream/products.html
+++ b/natural-ice-cream/products.html
@@ -29,6 +29,14 @@
         font-weight: weight;
         font-style: normal;
       }
+
+      .card .card-body .anchor {
+        opacity: 0;
+      }
+
+      .card:hover .anchor {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -84,7 +92,7 @@
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
+            class="nav-link dropdown-toggle text-light"
             href="./products.html"
             id="navbarDropdown"
             role="button"
@@ -133,7 +141,12 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+          <a
+            href="./blogs.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Blogs</a
+          >
         </li>
       </ul>
     </div>
@@ -173,6 +186,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Candy Berry Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -184,6 +201,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Anjer Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -197,6 +218,10 @@
               <h5 class="card-title text-uppercase">
                 Salted Caramel Ice Cream
               </h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -208,6 +233,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Butterscotch Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -219,6 +248,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Jalebi Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -230,6 +263,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Rose Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -241,6 +278,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Kala Jamun</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -252,6 +293,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Spicy Guava</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -263,6 +308,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">RasberryPI Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -274,6 +323,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Gooseberry Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -285,6 +338,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Black Currant Ice Cream</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
 
@@ -296,6 +353,10 @@
             />
             <div class="card-body">
               <h5 class="card-title text-uppercase">Blue Berry</h5>
+              <div class="anchor d-flex gap-5">
+                <a href="#" class="btn btn-success">Buy</a>
+                <a href="#" class="btn btn-secondary">Read More</a>
+              </div>
             </div>
           </div>
         </div>
