--- a/natural-ice-cream/our-legacy.html
+++ b/natural-ice-cream/our-legacy.html
@@ -82,9 +82,9 @@
             >Tree To Treat</a
           >
         </li>
-        <li class="nav-item dropdown text-light">
+        <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
+            class="nav-link dropdown-toggle text-light"
             href="./products.html"
             id="navbarDropdown"
             role="button"
