--- a/natural-ice-cream/store-locator.html
+++ b/natural-ice-cream/store-locator.html
@@ -145,7 +145,7 @@
     <!-- list items -->
 
     <!-- Form -->
-    <div>
+    <div class="d-flex">
       <form style="max-width: 60%; margin: 50px auto">
         <div class="mb-3">
           <select class="form-select" aria-label="Default select example">
@@ -169,6 +169,18 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121656.36753469992!2d75.83621554407016!3d17.661452170030618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc5d082b54ac5d5%3A0x3c719de6c83710d0!2sSolapur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1769058330381!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          style="border: 0; margin-right: 300px"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
     </div>
     <!-- Form -->
 
