added new files and folders

--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -31,7 +31,7 @@
       }
 
       img:hover {
-        scale: 1.05;
+        scale: 1.03;
         cursor: pointer;
       }
     </style>
@@ -88,12 +88,11 @@
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle text-light"
-            href="./products.html"
+            class="nav-link dropdown-toggle"
+            href="#"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
-            aria-expanded="false"
           >
             Products
           </a>
