--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -88,11 +88,12 @@
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
-            href="#"
+            class="nav-link dropdown-toggle text-light"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
             Products
           </a>
