added some features

--- a/natural-ice-cream/blogs/add-a-sweet-twist-to-your-festivities-with-raspberry-chocolate-ice-cream.html
+++ b/natural-ice-cream/blogs/add-a-sweet-twist-to-your-festivities-with-raspberry-chocolate-ice-cream.html
@@ -29,6 +29,19 @@
         font-weight: weight;
         font-style: normal;
       }
+
+      img:hover {
+        scale: 1.03;
+        cursor: pointer;
+      }
+
+      .dropdownMenu ul {
+        opacity: 0;
+      }
+
+      .dropdownMenu:hover ul {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
