--- a/natural-ice-cream/products.html
+++ b/natural-ice-cream/products.html
@@ -84,7 +84,7 @@
       >
         <li>
           <a
-            href="../ingredient-story.html"
+            href="./ingredient-story.html"
             class="text-light"
             style="text-decoration: none"
             >Tree To Treat</a
@@ -93,7 +93,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-light"
-            href="../products.html"
+            href="./products.html"
             id="navbarDropdown"
             role="button"
             data-bs-toggle="dropdown"
@@ -110,7 +110,7 @@
         </li>
         <li>
           <a
-            href="../our-legacy.html"
+            href="./our-legacy.html"
             class="text-light"
             style="text-decoration: none"
             >Our Legacy</a
@@ -118,7 +118,7 @@
         </li>
         <li>
           <a
-            href="../malai.html"
+            href="./malai.html"
             class="text-light"
             style="text-decoration: none"
             >Malai Magic</a
@@ -126,7 +126,7 @@
         </li>
         <li>
           <a
-            href="../franchise-queries.html"
+            href="./franchise-queries.html"
             class="text-light"
             style="text-decoration: none"
             >Franchise Queries</a
@@ -134,7 +134,7 @@
         </li>
         <li>
           <a
-            href="../store-locator.html"
+            href="./store-locator.html"
             class="text-light"
             style="text-decoration: none"
             >Store Locator</a
@@ -142,7 +142,7 @@
         </li>
         <li>
           <a
-            href="../blogs.html"
+            href="./blogs.html"
             class="text-light"
             style="text-decoration: none"
             >Blogs</a
